# Glimpse

./: .gitignore  .vercelignore  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  task.md  terms.html  vercel.json
.github/workflows/: desktop-release.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
drizzle/: 0000_lowly_leo.sql  0002_motionless_jubilee.sql  0003_flippant_runaways.sql  0004_careless_colossus.sql  0005_short_silver_surfer.sql  0006_keen_hemingway.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
scripts/: migrate.mjs
src/: auth.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/discover/: page.tsx
src/app/dms/: page.tsx
src/app/download/: page.tsx
src/app/forgot-password/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/reset-password/: page.tsx
src/app/rooms/: page.tsx
src/app/search/: page.tsx  search-view.tsx
src/app/settings/: page.tsx
src/app/sign-in/: page.tsx
src/db/: index.ts  schema.ts
src/hooks/: use-call-token.ts  use-matchmaking.ts
src/lib/: auto-tags.ts  avatar-image.ts  chatroom.ts  feed.ts  guest-identity.ts  guest-session.ts  identity.ts  mailer.ts  matchmaking.ts  permissions.ts  room-code.ts  settings-store.ts  site.ts  social.ts
src/types/: next-auth.d.ts
(+136 files in other folders)
